[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = { version = "0.4.3" }
tokio = { "version" = "1.10", features = ["full"] }
sha3 = { "version" = "0.10.6", features = ["std"] }
parity-scale-codec = { version = "3.1.3", features = ["derive"] }
#secp256k1 = { version = "0.25.0", features = ["rand-std", "rand", "global-context", "recovery"] }
secp256k1 = { version = "0.25.0", features = [] }

[dependencies.num]
version = "0.4"