[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "server"
path = "src/main.rs"

[dependencies]
serde_json = '*'
serde = { version = "1.0.104", features = ["derive"] }
tokio = { "version" = "1.10", features = ["full"] }