[package]
name = "sum-storage-runtime-api"
version = "4.0.0-dev"
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies.sp-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-12'
version = '4.0.0-dev'

[dev-dependencies]
serde_json = "1.0"

[features]
default = ["std"]
std = [
	"sp-api/std",
]